beispiel Aufgabe 1 anker

--- a/Aufgabe1_1/index.html
+++ b/Aufgabe1_1/index.html
@@ -7,6 +7,21 @@
 	<title>Aufgabe 1.1</title>
 </head>
 <body>
-	<h1>Hallo liebe Studis! :)</h1>
+	<h1 id="oben">Hallo liebe Studis! :)</h1>
+	<a href="https://google.com">Klicke hier für Google!</a>
+	<p id="firstParagraph">Erster Absatz Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae doloremque voluptate tenetur, minus odio deleniti blanditiis maxime molestias quasi soluta quaerat in sequi beatae delectus aliquid voluptas omnis dicta amet.
+	Quia excepturi doloremque iusto temporibus quae aliquid maiores velit voluptates placeat, veniam rerum reprehenderit ab animi perspiciatis id voluptatibus architecto nisi officia alias ipsum asperiores molestias, quasi at a. Quam.
+	Reprehenderit modi vitae beatae nobis culpa eius optio hic quia inventore tempora illum consequatur illo, fugit sed id commodi numquam sit exercitationem recusandae minima eum consequuntur facere aliquam? Fuga, harum.
+	Vitae nisi exercitationem quae nobis ratione voluptatibus perferendis. Sapiente alias atque, quae ratione possimus dicta dolore quidem excepturi facilis mollitia molestiae commodi animi debitis distinctio ex voluptate impedit voluptates minima.
+	Perferendis numquam itaque veritatis sequi architecto, voluptates iste neque odio consequuntur quo voluptatem aliquam commodi est rerum officia quibusdam animi enim reprehenderit aliquid porro a molestias? Maxime, quidem. Eveniet, accusantium!
+	Ut deserunt, earum eveniet nesciunt, at accusantium repellendus optio aperiam, maxime perferendis inventore? Porro cupiditate atque, at rerum doloremque blanditiis natus modi? Autem cumque recusandae quisquam maxime molestiae aperiam dicta.
+	Odio amet neque quibusdam sit qui laudantium impedit fuga corrupti veritatis, error totam corporis quas possimus accusamus tenetur, perspiciatis iste enim ratione laboriosam facere quisquam est, unde beatae. Dicta, aliquam.
+	Quae accusamus magni quaerat, laborum eos nemo nobis fugit quis, quo voluptates qui quidem, impedit voluptatum modi? Similique aliquid culpa atque eveniet, fugiat, provident facilis nihil dignissimos non, totam ab!
+	Molestiae distinctio laudantium non laboriosam expedita debitis tempore, doloremque animi aliquid ipsum facilis nihil, quas eius ab pariatur iste cumque quaerat itaque cum consequatur soluta. Sed in harum quidem! Quis?
+	Quos deserunt tempora nostrum earum commodi eaque tempore mollitia consequuntur. Voluptatum, laudantium sapiente quasi labore facere nulla expedita harum. Vero, odio aliquid. Doloribus deleniti expedita perferendis laudantium voluptas, veniam possimus!</p>
+	<p>
+		<a href="#firstParagraph">Zurück zum ersten Absatz.</a>
+	</p>
+
 </body>
 </html>
