--- a/Aufgabe2_2/index.html
+++ b/Aufgabe2_2/index.html
@@ -5,8 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="script.js"></script>
+	<script src="script.js" defer></script>
 </head>
 <body>
+	<canvas id="myCanvas" width="400" height="400"></canvas>
 </body>
 </html>
